Admin page updated more. Added filter and sort